apps/kube/agones/palworld/manifests/live-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: palworld-relay-live
    namespace: palworld
    labels:
        app: palworld
        app.kubernetes.io/part-of: palworld
        kbve.com/category: game-server
        kbve.com/stack: agones
        kbve.com/managed-by: argocd
spec:
    type: ClusterIP
    selector:
        app: palworld
    ports:
        - name: live
          port: 8300
          targetPort: 8300
          protocol: TCP
